agg link readme y solucion img

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </article>
     <hr>
     <article class="item">
-        <img class="size-img" src="/assets/img/Screen Shot 2018-11-28 at 15.27.14.jpg" alt="img usuario-2">
+        <img class="size-img" src="assets/img/Screen Shot 2018-11-28 at 15.27.14.jpg" alt="img usuario-2">
         <h3> Juanita <br> <p class="p">At vero eos et accusa</p></h3>
     </article>
     <hr>
